# ligand_shape_complementarity

./: LICENSE  README.md  environment.yml  pyproject.toml
examples/: HYBRID_SC_IMPLEMENTATION.md  eda_sc_structure.py  plot_correlation_from_csv.py  plot_surface_debug.py  save_scores.py  sc_scores_benchmark.csv  sc_scores_hybrid.csv  sc_scores_hybrid_rdkit.csv  score_contact_axis.py  score_msms.py  score_pdb_interface.py  test.ipynb  visualize_sc_surfaces.py
src/shape_complementarity/: __init__.py  contact_axis.py  geometry.py  ligand_radii.py  msms_surface.py  parallel.py  prody_io.py  radii.py  rosetta_radii.py  score.py  surface.py  visualize.py
testdata/: README.md  benchmark.csv
tests/: conftest.py  test_smoke.py  test_trim_fallback.py
