[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "shape-complementarity"
version = "0.2.1"
description = "Molecular shape complementarity scoring with NumPy and MSMS."
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
  "numpy",
  "scipy",
  "prody",
  "rdkit",
  "tqdm",
]

[tool.setuptools.packages.find]
where = ["src"]
